[gd_scene load_steps=3 format=3 uid="uid://woq60hl2l3mm"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_udiqp"]

[sub_resource type="LabelSettings" id="LabelSettings_4q2at"]

[node name="OptionCanvas" type="CanvasLayer"]
script = ExtResource("1_udiqp")
mainMenu = "res://Scenes/Levels/main_menu.tscn"

[node name="OptionMenu" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -133.0
offset_right = 124.5
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionMenu"]
layout_mode = 2
alignment = 1

[node name="VolumeLabel" type="Label" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
text = "Volume"
label_settings = SubResource("LabelSettings_4q2at")
horizontal_alignment = 1

[node name="Audio" type="HSlider" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.1

[node name="Continue" type="Button" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Restart" type="Button" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="OptionMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="drag_ended" from="OptionMenu/VBoxContainer/Audio" to="." method="_on_audio_drag_ended"]
[connection signal="pressed" from="OptionMenu/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="OptionMenu/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="OptionMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
